<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#563A3A">
    <Button
            android:id="@+id/btnclose"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="118dp"
            android:layout_height="42dp"
            android:background="#000000"
            android:text="выход"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.901"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnshowlogs"/>
    <Button
            android:id="@+id/btncallibrate"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="131dp"
            android:layout_height="28dp"
            android:background="#2C1616"
            android:text="калибровка"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.896"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.778" android:textColorHint="#3F1818"/>
    <Button
            android:id="@+id/btnshowlogs"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="118dp"
            android:layout_height="42dp"
            android:background="#000000"
            android:text="@string/view_logs"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.901"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btncallibrate" app:layout_constraintVertical_bias="0.221"/>
    <Button
            android:id="@+id/btnthread"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="118dp"
            android:layout_height="42dp"
            android:background="#2A6A23"
            android:text="@string/start"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.105"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.87"/>
    <TextView
            android:id="@+id/textmain"
            android:layout_width="322dp"
            android:layout_height="322dp"
            android:fontFamily="serif-monospace"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.179"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.039"/>

    <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:fontFamily="serif-monospace"
            android:scrollbarTrackVertical="@android:color/background_dark"
            android:shadowColor="#FFFFFF"
            android:text="@string/defaultx"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textCursorDrawable="@android:drawable/alert_dark_frame"
            android:textSize="18sp"
            android:theme="@style/SCBSwitch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.714"/>
    <EditText
            android:id="@+id/textedit"
            android:layout_width="286dp"
            android:layout_height="37dp"
            android:ems="10"
            android:fontFamily="serif-monospace"
            android:inputType="number"
            android:text="100"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.232"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:id="@+id/textView6"
            android:layout_width="296dp"
            android:layout_height="22dp"
            android:layout_marginTop="37dp"
            android:fontFamily="serif-monospace"
            android:text="@string/update_interval"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.252"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.58"/>
</androidx.constraintlayout.widget.ConstraintLayout>
